--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "Panton";
+  font-family: "Zain";
   font-weight: 400;
   font-display: swap;
   src: url("../assets/fonts/Panton-Trial-Regular.woff") format("woff");
